--- a/assets/styles/scss/abstracts/_mixins.scss
+++ b/assets/styles/scss/abstracts/_mixins.scss
@@ -5,6 +5,7 @@
 // #  Import all mixin
 @import 'mixins/breakpoints';
 @import 'mixins/containers';
+@import 'mixins/responsive-font-sizes';
 @import 'mixins/box-shadows';
 @import 'mixins/wireframes';
 @import 'mixins/transitions';
