--- a/assets/styles/scss/base/_base.scss
+++ b/assets/styles/scss/base/_base.scss
@@ -19,6 +19,8 @@ html {
 
 // #  <body>
 body {
+  @include fluid-type(40rem, 80rem, 1rem, 2rem);
+
   min-width: calc(#{$dimension--xxs} - #{$size--xl});
   margin: 0 auto;
   color: $color--text;
