--- a/assets/styles/scss/base/_media.scss
+++ b/assets/styles/scss/base/_media.scss
@@ -11,15 +11,13 @@
 svg {
   width: 100%;
   height: auto;
+  color: $color--text;
+  fill: $color--text;
   object-fit: cover;
   object-position: center center;
-  fill: $color--text;
-  color: $color--text;
 }
 
 // -  <<----------<< Specific >>---------->>
-
-// ...
 
 .icon {
   color: $color--text;
@@ -35,7 +33,8 @@ svg {
 img {
   width: 100%;
   height: auto;
-  object-fit: cover;
+  object-fit: contain;
+  // object-fit: cover;
   object-position: center center;
 }
 
