--- a/assets/styles/scss/base/_media.scss
+++ b/assets/styles/scss/base/_media.scss
@@ -11,8 +11,8 @@
 svg {
   width: 100%;
   height: auto;
-  color: $color--text;
-  fill: $color--text;
+  color: var(--foreground-color);
+  fill: var(--foreground-color);
   object-fit: cover;
   object-position: center center;
 }
@@ -20,8 +20,8 @@ svg {
 // -  <<----------<< Specific >>---------->>
 
 .icon {
-  color: $color--text;
-  fill: $color--text;
+  color: var(--foreground-color);
+  fill: var(--foreground-color);
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -33,8 +33,7 @@ svg {
 img {
   width: 100%;
   height: auto;
-  object-fit: contain;
-  // object-fit: cover;
+  object-fit: cover;
   object-position: center center;
 }
 
