--- a/assets/styles/scss/abstracts/mixins/_wireframes.scss
+++ b/assets/styles/scss/abstracts/mixins/_wireframes.scss
@@ -4,15 +4,10 @@
 
 // - With HTML data attributes
 
-html {
-  --fill: hsla(0, 0%, 0%, 0.5);
-  --wire: #f00;
-}
-
 [data-wf] {
   position: relative;
   z-index: 1;
-  outline: calc(#{$size--xxs} / 2) solid var(--wire);
+  outline: calc(#{$size--xxs} / 2) solid var(--wireframe--wire);
 }
 
 [data-wf]::before {
@@ -28,24 +23,24 @@ html {
   background:
     linear-gradient(to top right,
     transparent calc(50% - 1px),
-    var(--wire) calc(50% - 1px),
-    var(--wire) calc(50% + 1px),
+    var(--wireframe--wire) calc(50% - 1px),
+    var(--wireframe--wire) calc(50% + 1px),
     transparent calc(50% + 1px)),
     linear-gradient(to bottom right,
     transparent calc(50% - 1px),
-    var(--wire) calc(50% - 1px),
-    var(--wire) calc(50% + 1px),
+    var(--wireframe--wire) calc(50% - 1px),
+    var(--wireframe--wire) calc(50% + 1px),
     transparent calc(50% + 1px)),
-    var(--fill);
-  color: var(--wire);
+    var(--wireframe--bg-color);
+  color: var(--wireframe--wire);
   content: attr(data-wf);
   font: bold 2em Jubilat, Georgia, serif;
   text-shadow:
-    0 0 0.25em var(--fill),
-    0 0 0.25em var(--fill),
-    0 0 0.25em var(--fill),
-    0 0 0.25em var(--fill),
-    0 0 0.25em var(--fill);
+    0 0 0.25em var(--wireframe--bg-color),
+    0 0 0.25em var(--wireframe--bg-color),
+    0 0 0.25em var(--wireframe--bg-color),
+    0 0 0.25em var(--wireframe--bg-color),
+    0 0 0.25em var(--wireframe--bg-color);
 }
 
 // -  Automatic
