--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -7,7 +7,7 @@
 +  PARTIAL SCSS GROUP 1 - `abstracts/`
 \* ========================================================================== */
 @import 'abstracts/variables';
-@import 'abstracts/configurations';
+@import 'abstracts/configs';
 @import 'abstracts/functions';
 @import 'abstracts/mixins';
 @import 'abstracts/utilities';
