--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -3,14 +3,17 @@
 \* ========================================================================== */
 @import url("https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css");
 html {
-  --fill: hsla(0, 0%, 0%, 0.5);
-  --wire: #f00;
+  --wireframe--bg-color: hsla(0, 0%, 0%, 0.5);
+  --wireframe--wire: #f00;
 }
 
+/* -------------------------------------------------------------------------- *\
+-  Wireframe
+\* -------------------------------------------------------------------------- */
 [data-wf] {
   position: relative;
   z-index: 1;
-  outline: calc(0.25rem / 2) solid var(--wire);
+  outline: calc(0.25rem / 2) solid var(--wireframe--wire);
 }
 
 [data-wf]::before {
@@ -29,11 +32,11 @@ html {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background: linear-gradient(to top right, transparent calc(50% - 1px), var(--wire) calc(50% - 1px), var(--wire) calc(50% + 1px), transparent calc(50% + 1px)), linear-gradient(to bottom right, transparent calc(50% - 1px), var(--wire) calc(50% - 1px), var(--wire) calc(50% + 1px), transparent calc(50% + 1px)), var(--fill);
-  color: var(--wire);
+  background: linear-gradient(to top right, transparent calc(50% - 1px), var(--wireframe--wire) calc(50% - 1px), var(--wireframe--wire) calc(50% + 1px), transparent calc(50% + 1px)), linear-gradient(to bottom right, transparent calc(50% - 1px), var(--wireframe--wire) calc(50% - 1px), var(--wireframe--wire) calc(50% + 1px), transparent calc(50% + 1px)), var(--wireframe--bg-color);
+  color: var(--wireframe--wire);
   content: attr(data-wf);
   font: bold 2em Jubilat, Georgia, serif;
-  text-shadow: 0 0 0.25em var(--fill), 0 0 0.25em var(--fill), 0 0 0.25em var(--fill), 0 0 0.25em var(--fill), 0 0 0.25em var(--fill);
+  text-shadow: 0 0 0.25em var(--wireframe--bg-color), 0 0 0.25em var(--wireframe--bg-color), 0 0 0.25em var(--wireframe--bg-color), 0 0 0.25em var(--wireframe--bg-color), 0 0 0.25em var(--wireframe--bg-color);
 }
 
 address,
