--- a/assets/styles/scss/abstracts/mixins/_box-shadows.scss
+++ b/assets/styles/scss/abstracts/mixins/_box-shadows.scss
@@ -7,22 +7,27 @@
   // #  Box-Shadow - Level 1
   @if $box-shadow--level == 1 {
     box-shadow: $box-shadow--level-1;
+    @content;
   }
   // #  Box-Shadow - Level 2
   @else if $box-shadow--level == 2 {
     box-shadow: $box-shadow--level-2;
+    @content;
   }
   // #  Box-Shadow - Level 3
   @else if $box-shadow--level == 3 {
     box-shadow: $box-shadow--level-3;
+    @content;
   }
   // #  Box-Shadow - Level 4
   @else if $box-shadow--level == 4 {
     box-shadow: $box-shadow--level-4;
+    @content;
   }
   // #  Box-Shadow - Level 5
   @else if $box-shadow--level == 5 {
     box-shadow: $box-shadow--level-5;
+    @content;
   }
   // #  Invalid arguments!
   @else {
