--- a/assets/styles/scss/abstracts/mixins/_containers.scss
+++ b/assets/styles/scss/abstracts/mixins/_containers.scss
@@ -30,36 +30,42 @@
     @include old-float-fix;
 
     max-width: calc(#{$dimension--s} - 0.1px);
+    @content;
   }
   // #  Breakpoint 3 - Small - 60rem / 960px
   @else if $breakpoint == s {
     @include old-float-fix;
 
     max-width: calc(#{$dimension--m} - 0.1px);
+    @content;
   }
   // #  Breakpoint 4 - Medium - 80rem / 1280px
   @else if $breakpoint == m {
     @include old-float-fix;
 
     max-width: calc(#{$dimension--m} - 0.1px);
+    @content;
   }
   // #  Breakpoint 5 - Large - 100rem / 1600px
   @else if $breakpoint == l {
     @include old-float-fix;
 
     max-width: calc(#{$dimension--m} - 0.1px);
+    @content;
   }
   // #  Breakpoint 6 - Extra Large - 120rem / 1920px
   @else if $breakpoint == xl {
     @include old-float-fix;
 
     max-width: calc(#{$dimension--m} - 0.1px);
+    @content;
   }
   // #  Breakpoint 7 - Extra Extra Large - 140rem / 2240px
   @else if $breakpoint == xxl {
     @include old-float-fix;
 
     max-width: calc(#{$dimension--m} - 0.1px);
+    @content;
   }
   // #  Invalid arguments!
   @else {
