--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -18,13 +18,13 @@ html {
 // -  <<----------<< Whitespace Sizes >>---------->>
 
 // #  Whitespace
-$size--xxs: 0.25rem; // 4px
-$size--xs: 0.5rem; // 8px
-$size--s: 1rem; // 16px
-$size--m: 1.5rem; // 24px
-$size--l: 2rem; // 32px
-$size--xl: 3rem; // 48px
-$size--xxl: 4rem; // 64px
+$whitespace--xxs: 0.25rem; // 4px
+$whitespace--xs: 0.5rem; // 8px
+$whitespace--s: 1rem; // 16px
+$whitespace--m: 1.5rem; // 24px
+$whitespace--l: 2rem; // 32px
+$whitespace--xl: 3rem; // 48px
+$whitespace--xxl: 4rem; // 64px
 
 // -  <<----------<< Box Dimension Sizes >>---------->>
 
@@ -99,7 +99,7 @@ $font-family--article-title: 'Montserrat', sans-serif;
 $font-family--text: 'Roboto', sans-serif;
 
 // #  Font-Size
-$font-size--subject: $font-size--6;
+$font-size--subject: $font-size--7;
 $font-size--section-title: $font-size--5;
 $font-size--article-title: $font-size--3;
 $font-size--text: $font-size--1;
